# font-maker

./: .gitignore  .gitmodules  Dockerfile.app  Dockerfile.cli  Dockerfile.wasm  README.md  docker-compose.yml
app/: vite.config.ts
app/public/: complex-worker.js  sdfglyph-complex.js  sdfglyph-complex.wasm  sdfglyph.js  sdfglyph.wasm  worker.js
app/src/components/App/: App.module.css  App.tsx  appReducer.ts  utilities.ts
app/src/components/ComplexSection/: ComplexSection.module.css  ComplexSection.tsx
app/src/data/: data.ts
app/src/types/: types.ts
docker/: Dockerfile.app  Dockerfile.cli  Dockerfile.wasm
scripts/: build_cli.sh  build_wasm.sh
sdfglyph/: CMakeLists.txt  complex-font-maker  complex-scripts.cpp  main.cpp
sdfglyph/src/: complex_range.cpp  complex_range.hpp  fontstack.cpp  fontstack.hpp  glyph_encode.cpp  glyph_encode.hpp  unicode_range.cpp  unicode_range.hpp
